# stepik-test-assignment

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
homeworker/: manage.py  settings.py  wsgi.py
homeworker/apps/: __init__.py
