[tool.poetry]
name = "stepik-test-assignment"
version = "0.1.0"
description = ""
authors = ["Dima Boger <kotvberloge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.7"
djangorestframework = "^3.10.3"

[tool.poetry.dev-dependencies]
mypy = "^0.740"
wemake-python-styleguide = "^0.13.0"
pytest = "^5.3.0"
django-stubs = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
